--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="180x180" href="/vite.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyCrewManager Dashboard</title>
+    <title>MyCrewManager</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
